# streamlit-echarts-svg-dl

./: .gitignore  MANIFEST.in  README.md  man_build.py  pyproject.toml
streamlit_echarts/: __init__.py
streamlit_echarts/frontend/: package-lock.json  package.json
streamlit_echarts/frontend/src/: EchartsChart.tsx  index.tsx
streamlit_echarts5/: __init__.py
streamlit_echarts5/frontend/: package.json
streamlit_echarts5/frontend/public/: index_old.html
