
[project]
name = "streamlit-echarts"
version = "0.5.0"
description = "Echarts5 custom component for Streamlit"
authors = [
    {name = "Fanilo ANDRIANASOLO", email = "andfanilo@gmail.com"},
]
dependencies = ["pyecharts >= 1.9", "simplejson >= 3.0", "streamlit >= 0.63"]
requires-python = ">=3.6"
readme = "README.md"
classifiers = []

[project.urls]
Homepage = "https://github.com/andfanilo/streamlit-echarts"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["streamlit_echarts*"]  # ["*"] by default
exclude = ["streamlit_echarts/DEBUG"]  # empty by default
namespaces = false  # true by default

[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

