[project]
name = "streamlit-echarts"
version = "0.5.4"
description = "Echarts5 custom component for Streamlit"
authors = [
    {name = "Fanilo ANDRIANASOLO", email = "andfanilo@gmail.com"},
]
dependencies = ["pyecharts >= 1.9", "simplejson >= 3.0", "streamlit >= 0.63"]
requires-python = ">=3.6"
readme = "README.md"
classifiers = []

[project.urls]
Homepage = "https://github.com/andfanilo/streamlit-echarts"


[tool.setuptools]
# this option will Accept all data files and directories matched by MANIFEST.in or added by a plugin.
include-package-data = true

[tool.setuptools.exclude-package-data]
streamlit_echarts = ["DEBUG"]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["streamlit_echarts*"]  # ["*"] by default
namespaces = false  # true by default

[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

